# image_to_rgb

./: .gitignore  README.rst  pyproject.toml
image_to_rgb/: blue.txt  constants.py  create_rgb_mif.py  green.txt  image_to_text.py  main.py  red.txt  write_mif_file.py
image_to_rgb/assests/: memory.mif
image_to_rgb/smileyFace/: blue.mif  green.mif  red.mif
tests/: test_image_to_rgb.py
